...
                                )
                            }
                        }
                        .padding(.horizontal)
                    }

                    sectionHeader(NSLocalizedString("Live TV", comment: "Home view section title"))

                    ScrollView(.horizontal, showsIndicators: false) {
                        HStack(spacing: 50) {
                            ForEach(channels) { channel in
                                CarouselItemView(url: channel.logoURL, title: channel.name, destination: EmptyView(), backgroundURL: $backgroundPosterURL)
                            }
...
